# cpp-benchmark-template

./: CMakeLists.txt  justfile  shell.nix
cmake/: Findbenchmark.cmake
src/: main.cpp
